# cpp-compiler-prep

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: lexer_bench.cpp
src/: main.cpp
src/common/: error.cpp  error.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
tests/: lexer_test.cpp
